syntax = "proto3";

import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";
import "rideBooking/models.proto";
package rideBooking;

service AdminParkService {
  rpc AddRide(AddRideRequest) returns(google.protobuf.BoolValue);
  rpc AddPassToPark(AddPassRequest) returns(google.protobuf.BoolValue);
  rpc AddSlotCapacity(AddSlotCapacityRequest) returns(SlotCapacityResponse);
}

message AddRideRequest{
  string rideName = 1;
  RideTime rideTime = 2;
  int32 slotMinutes = 3;
}

message AddPassRequest{
  string visitorId = 1;
  PassTypeEnum passType = 2;
  int32 validDay = 3;
}

message AddSlotCapacityRequest{
  string rideName = 1;
  int32 validDay = 2;
  int32 slotCapacity = 3;
}

message SlotCapacityResponse {
  int32 acceptedAmount = 1;
  int32 relocatedAmount = 2;
  int32 cancelledAmount = 3;
}