syntax = "proto3";

 import "google/protobuf/wrappers.proto";
 import "google/protobuf/empty.proto";
 import "rideBooking/models.proto";

 package rideBooking;

service RideBookingService {
  rpc getRides(google.protobuf.Empty) returns (GetRideResponse);

  rpc getRideAvailability(GetRideAvailabilityRequest) returns (GetRideAvailabilityResponse);

  rpc bookRide(BookRideRequest) returns (BookRideResponse);

  rpc confirmBooking(BookRideRequest) returns (BookRideResponse);

  rpc cancelBooking(BookRideRequest) returns (BookRideResponse);
}

message GetRideResponse {
  repeated Ride rides = 1;
}

message Ride {
  google.protobuf.StringValue name = 1;
  google.protobuf.StringValue opening_time = 2;
  google.protobuf.StringValue closing_time = 3;
}

message GetRideAvailabilityRequest {
  google.protobuf.StringValue day_of_year = 1;
  optional google.protobuf.StringValue ride_name = 2;
  google.protobuf.StringValue start_time_slot = 3;
  optional google.protobuf.StringValue end_time_slot = 4;
}

message GetRideAvailabilityResponse {
  repeated RideAvailability ride_availability = 1;
}

message RideAvailability {
  google.protobuf.StringValue ride_name = 1;
  repeated TimeSlotAvailability time_slot_availability = 2;
}

message TimeSlotAvailability {
  google.protobuf.StringValue time_slot = 1;
  google.protobuf.Int32Value confirmed_bookings = 2;
  google.protobuf.Int32Value pending_bookings = 3;
  optional google.protobuf.Int32Value ride_capacity = 4;
}

message BookRideRequest {
  google.protobuf.StringValue ride_name = 1;
  google.protobuf.StringValue day_of_year = 2;
  google.protobuf.StringValue time_slot = 3;
  google.protobuf.StringValue visitor_id = 4;
}

message BookRideResponse {
  ReservationState status = 1;
}


